--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.8.6",
     "aos": "^2.3.4",
     "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "firebase": "^10.6.0",
     "framer-motion": "^10.16.5",
     "localforage": "^1.10.0",
@@ -20,6 +21,8 @@
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.1",
+    "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.1",
     "react-hook-form": "^7.48.2",
@@ -28,6 +31,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.20.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1"
   },
